--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.mmuhamadamirzaidi.elkencarapptest"
         minSdkVersion 21
@@ -22,9 +21,6 @@ android {
 dependencies {
     //General Library
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -40,5 +36,5 @@ dependencies {
     //Others Library
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 }
